added base64 coding/encoding feature